# OpenGL

./: CMakeLists.txt  Camera.cpp  GLFW_main.cpp  OpenGL.cpp  README.md  SDL2_main.cpp  Shader.cpp  Shader.h  fragmentShader.glsl  main.cpp  vertexShader.glsl
glsl/: fragmentShader.glsl  light.fs.glsl  light.vs.glsl  vertexShader.glsl
include/: Camera.h  GLFW_main.h  OpenGL.h  SDL2_main.h  Shader.h
