cmake_minimum_required(VERSION 3.8)
project(opengl)
IF(APPLE)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo -framework CoreFoundation")
ENDIF (APPLE)
if (WIN32)
    link_directories(lib)
endif (WIN32)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(include)
link_directories(/usr/local/lib)
set(SOURCE_FILES main.cpp Shader.cpp OpenGL.cpp GLFW_main.cpp SDL2_main.cpp Camera.cpp include/Camera.h)
add_executable(opengl ${SOURCE_FILES})
target_link_libraries(opengl SDL2 glfw3 GLEW SOIL)